# cdde

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  run_tests.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/docker/: base.Dockerfile  cms.Dockerfile  dcr.Dockerfile  dfl.Dockerfile  dpa.Dockerfile
.github/workflows/: coverage.yml  docker-publish.yml  lint.yml  test.yml
charts/cdde/: Chart.yaml  values.yaml
charts/cdde/templates/: _helpers.tpl  cms-deployment.yaml  cms-service.yaml  dcr-deployment.yaml  dfl-deployment.yaml  dpa-deployment.yaml
crates/cdde-cms/: Cargo.toml
crates/cdde-cms/migrations/: 20240101000000_init.sql  20240102000000_dictionaries.sql  20240103000000_configurations.sql
crates/cdde-cms/src/: api.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  repository.rs
crates/cdde-cms/tests/: common.rs  integration_tests.rs  manipulation_rule_test.rs  peer_test.rs  routing_rule_test.rs  vr_test.rs
crates/cdde-config/: Cargo.toml
crates/cdde-config/src/: lib.rs
crates/cdde-core/: Cargo.toml
crates/cdde-core/src/: diameter.rs  error.rs  lib.rs  transport.rs
crates/cdde-dcr/: Cargo.toml
crates/cdde-dcr-core/: Cargo.toml
crates/cdde-dcr-core/src/: router.rs
crates/cdde-dcr-runtime/: Cargo.toml
crates/cdde-dcr-runtime/src/: service.rs
crates/cdde-dcr/src/: main.rs  processor.rs  routing.rs
crates/cdde-dcr/src/app/: mod.rs
crates/cdde-dcr/src/core/: manipulation.rs  mod.rs  router.rs
crates/cdde-dcr/src/runtime/: service.rs
crates/cdde-dfl/: Cargo.toml
crates/cdde-dfl-core/: Cargo.toml
crates/cdde-dfl-core/src/: lib.rs  session.rs  types.rs
crates/cdde-dfl-runtime/: Cargo.toml
crates/cdde-dfl-runtime/src/: session_actor.rs
crates/cdde-dfl/src/: client.rs  integration_test.rs  lib.rs  main.rs  network.rs  session.rs  store.rs
crates/cdde-dfl/src/app/: client.rs  mod.rs  network.rs  session.rs  store.rs
crates/cdde-dfl/src/core/: mod.rs
crates/cdde-dfl/src/runtime/: lib.rs  session_actor.rs
crates/cdde-dfl/tests/: e2e_test.rs  integration_test.rs
crates/cdde-diameter-dict/: Cargo.toml
crates/cdde-diameter-dict/src/: data_type.rs  lib.rs  manager.rs  standard.rs
crates/cdde-dpa/: Cargo.toml
crates/cdde-dpa-core/: Cargo.toml
crates/cdde-dpa-core/src/: fsm.rs  lib.rs  types.rs
crates/cdde-dpa-runtime/: Cargo.toml
crates/cdde-dpa-runtime/src/: peer_actor.rs
crates/cdde-dpa/src/: connector.rs  main.rs  state_machine.rs
crates/cdde-dpa/src/core/: mod.rs
crates/cdde-dpa/src/runtime/: peer_actor.rs
crates/cdde-dsl-engine/: Cargo.toml
crates/cdde-dsl-engine/src/: engine.rs  lib.rs  rule.rs
crates/cdde-logging/: Cargo.toml
crates/cdde-logging/src/: lib.rs
crates/cdde-metrics/: Cargo.toml
crates/cdde-metrics/src/: lib.rs
crates/cdde-proto/: Cargo.toml  build.rs
crates/cdde-proto/proto/: cdde.proto  internal.proto
crates/cdde-proto/src/: lib.rs
crates/cdde-shared/: Cargo.toml
crates/cdde-shared/src/: lib.rs
docs/: api.md
docs/design/: 01_requirement.md  02_basic_design.md  03_rust_module_plan.md  04_internal_proto.md  05_dfl_session_mgmt.md  06_dcr_manipulation.md  07_dpa_detail.md  08_cms_detail.md  09_dcr_routing_logic.md  10_network_architecture.md  11_diameter_dictionary.md  12_deployment_guide.md  13_testing_strategy.md  14_monitoring_observability.md  15_security_design.md  16_error_handling.md  17_enhance_design.md  18_architecture_patterns.md
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/: Layout.tsx
ui/src/pages/: Dashboard.tsx  Dictionaries.tsx  Peers.tsx  VirtualRouters.tsx
