[workspace]
resolver = "2"
members = [
    # Core crates (shared libraries)
    "crates/cdde-proto",
    "crates/cdde-core",
    "crates/cdde-diameter-dict",
    "crates/cdde-dsl-engine",
    
    # Application crates (binaries)
    "crates/cdde-dfl",
    "crates/cdde-dcr",
    "crates/cdde-dpa",
    "crates/cdde-cms",
    
    # Additional crates
    "crates/cdde-config",
    "crates/cdde-metrics",
    "crates/cdde-logging",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["monandkey <satoru070505@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/monandkey/cdde"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["time"] }

# gRPC and Protocol Buffers
tonic = "0.11"
prost = "0.12"
tonic-build = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Database (for CMS)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# HTTP server (for CMS)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Configuration
config = "0.14"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"

# Networking
socket2 = "0.5"

# XML parsing (for diameter dictionary)
quick-xml = { version = "0.31", features = ["serialize"] }

# Regular expressions
regex = "1.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# TLS
rustls = "0.22"
tokio-rustls = "0.25"

# JWT (for CMS authentication)
jsonwebtoken = "9.2"

# OpenTelemetry
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
