[package]
name = "cdde-cms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cdde-core = { path = "../cdde-core" }
cdde-proto = { path = "../cdde-proto" }
cdde-config = { path = "../cdde-config" }
cdde-logging = { path = "../cdde-logging" }
cdde-metrics = { path = "../cdde-metrics" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1.0"
mime = "0.3"
