[package]
name = "cdde-cms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "cdde_cms"
path = "src/lib.rs"

[dependencies]
cdde-core = { path = "../cdde-core" }
cdde-proto = { path = "../cdde-proto" }
cdde-config = { path = "../cdde-config" }
cdde-logging = { path = "../cdde-logging" }
cdde-metrics = { path = "../cdde-metrics" }
cdde-diameter-dict = { path = "../cdde-diameter-dict" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
sqlx.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }


[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1.0"
mime = "0.3"
