[package]
name = "cdde-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
config.workspace = true
thiserror.workspace = true
validator = { version = "0.20.0", features = ["derive"] }
