[package]
name = "cdde-dcr-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap = "1.7.1"
bytes = "1.11.0"
cdde-core = { version = "0.1.0", path = "../cdde-core" }
cdde-dcr-core = { version = "0.1.0", path = "../cdde-dcr-core" }
cdde-proto = { version = "0.1.0", path = "../cdde-proto" }
cdde-shared = { version = "0.1.0", path = "../cdde-shared" }
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tonic.workspace = true
