[package]
name = "cdde-dcr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdde-core = { path = "../cdde-core" }
cdde-proto = { path = "../cdde-proto" }
cdde-diameter-dict = { path = "../cdde-diameter-dict" }
cdde-dsl-engine = { path = "../cdde-dsl-engine" }
cdde-logging = { path = "../cdde-logging" }
cdde-metrics = { path = "../cdde-metrics" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
