[package]
name = "cdde-dcr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdde-core = { path = "../cdde-core" }
cdde-proto = { path = "../cdde-proto" }
cdde-diameter-dict = { path = "../cdde-diameter-dict" }
cdde-dsl-engine = { path = "../cdde-dsl-engine" }
cdde-logging = { path = "../cdde-logging" }
cdde-metrics = { path = "../cdde-metrics" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
tonic.workspace = true
prost.workspace = true
cdde-dcr-core = { version = "0.1.0", path = "../cdde-dcr-core" }
cdde-dcr-runtime = { version = "0.1.0", path = "../cdde-dcr-runtime" }
cdde-shared = { version = "0.1.0", path = "../cdde-shared" }

[build-dependencies]
tonic-build.workspace = true
