[package]
name = "cdde-dcr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cdde-core = { path = "../cdde-core" }
cdde-proto = { path = "../cdde-proto" }
cdde-diameter-dict = { path = "../cdde-diameter-dict" }
cdde-dsl-engine = { path = "../cdde-dsl-engine" }
cdde-logging = { path = "../cdde-logging" }
cdde-metrics = { path = "../cdde-metrics" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
tonic.workspace = true
prost.workspace = true
bytes = "1.11.0"
regex.workspace = true
arc-swap = "1.7.1"
tokio-stream.workspace = true
cdde-shared = { version = "0.1.0", path = "../cdde-shared" }

[build-dependencies]
tonic-build.workspace = true
