[package]
name = "cdde-dfl-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cdde-dfl-core = { version = "0.1.0", path = "../cdde-dfl-core" }
cdde-shared = { version = "0.1.0", path = "../cdde-shared" }
futures = "0.3.31"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["time"] }
