[package]
name = "cdde-dfl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cdde-core = { path = "../cdde-core" }
cdde-proto = { path = "../cdde-proto" }
cdde-logging = { path = "../cdde-logging" }
cdde-metrics = { path = "../cdde-metrics" }
cdde-shared = { version = "0.1.0", path = "../cdde-shared" }
tokio.workspace = true
tokio-util = { workspace = true, features = ["time"] }
tokio-stream.workspace = true
async-trait.workspace = true
dashmap.workspace = true
tracing.workspace = true
tonic.workspace = true
prost.workspace = true
futures = "0.3"
bytes = "1.11.0"

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
futures = "0.3"
