[package]
name = "cdde-dpa-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cdde-dpa-core = { version = "0.1.0", path = "../cdde-dpa-core" }
cdde-shared = { version = "0.1.0", path = "../cdde-shared" }
tokio = { workspace = true, features = ["full"] }
