[package]
name = "cdde-dpa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cdde-core = { path = "../cdde-core" }
cdde-proto = { path = "../cdde-proto" }
cdde-logging = { path = "../cdde-logging" }
cdde-metrics = { path = "../cdde-metrics" }
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde.workspace = true
rand = "0.9.2"
cdde-dpa-core = { version = "0.1.0", path = "../cdde-dpa-core" }
cdde-dpa-runtime = { version = "0.1.0", path = "../cdde-dpa-runtime" }
cdde-shared = { version = "0.1.0", path = "../cdde-shared" }
