[package]
name = "cdde-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
